--- a/week6.html
+++ b/week6.html
@@ -23,11 +23,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
-<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -95,12 +95,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Steele</td>        <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
 <tr><td>BThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kraft</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
