--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
-<a href="week6.html"><b>6P</b></a><br>
+<a href="week6.html"><b>6</b></a>
+<a href="week7.html"><b>7P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -64,44 +65,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3700</font></td>
-    <td><font size=2>2995</font></td>
+    <td><font size=2>4480</font></td>
+    <td><font size=2>3415</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
-<tr><td><font size=2>States(1)</font></td>
+<tr><td><font size=2>Randy(5)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2915</font></td>
-    <td><font size=2>2665</font></td>
-    <td><font size=2>680</font></td>
-    <td><font size=2>385</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3620</font></td>
+    <td><font size=2>3920</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>480</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2830</font></td>
-    <td><font size=2>2680</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3515</font></td>
+    <td><font size=2>3470</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3335</font></td>
+    <td><font size=2>3445</font></td>
+    <td><font size=2>680</font></td>
+    <td><font size=2>385</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3050</font></td>
-    <td><font size=2>3045</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3770</font></td>
+    <td><font size=2>4005</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>410</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Randy(5)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2660</font></td>
-    <td><font size=2>3200</font></td>
-    <td><font size=2>610</font></td>
-    <td><font size=2>480</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -111,45 +112,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3890</font></td>
-    <td><font size=2>3075</font></td>
-    <td><font size=2>1245</font></td>
-    <td><font size=2>420</font></td>
-    <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3490</font></td>
-    <td><font size=2>3030</font></td>
+    <td><font size=2>4140</font></td>
+    <td><font size=2>3440</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2435</font></td>
-    <td><font size=2>3305</font></td>
-    <td><font size=2>660</font></td>
-    <td><font size=2>315</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Steven(8)</font></td>
-    <td><font size=2>1</font></td>
+<tr><td><font size=2>Grant(10)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>2855</font></td>
-    <td><font size=2>3390</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4300</font></td>
+    <td><font size=2>3725</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>2</font></td>
+<tr><td><font size=2>Steven(8)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3540</font></td>
+    <td><font size=2>3635</font></td>
     <td><font size=2>705</font></td>
     <td><font size=2>440</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>2350</font></td>
-    <td><font size=2>2790</font></td>
-    <td><font size=2>775</font></td>
+    <td><font size=2>3140</font></td>
+    <td><font size=2>3475</font></td>
+    <td><font size=2>790</font></td>
     <td><font size=2>320</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(4)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2680</font></td>
+    <td><font size=2>3990</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>245</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
