--- a/freeagt.html
+++ b/freeagt.html
@@ -1,113 +1,116 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 5)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 6)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Justin Fields          </td><td><font size=3> 560</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 360</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 355</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Deshaun Watson         </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Will Levis             </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Justin Fields          </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3> 525</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 485</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Will Levis             </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Deshaun Watson         </td><td><font size=3> 305</td></tr>
 <tr><td><font size=3>9)</td><td><font size=3>Malik Willis           </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Tyler Huntley          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Aidan O'Connell        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Aidan O'Connell        </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Tyler Huntley          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Bryce Young            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Tank Bigsby            </td><td><font size=3> 430</td></tr>
 <tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>Dameon Pierce          </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Sean Tucker            </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>DeeJay Dallas          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Roschon Johnson        </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Trey Sermon            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Jamaal Williams        </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Dare Ogunbowale        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Ameer Abdullah         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>CJ Ham                 </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Alec Ingold            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Samaje Perine          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Patrick Ricard         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Miles Sanders          </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Allen Lazard           </td><td><font size=3> 545</td></tr>
 <tr><td><font size=3>Alec Pierce            </td><td><font size=3> 450</td></tr>
 <tr><td><font size=3>Darnell Mooney         </td><td><font size=3> 445</td></tr>
 <tr><td><font size=3>Jauan Jennings         </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>Allen Lazard           </td><td><font size=3> 365</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 325</td></tr>
 <tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 275</td></tr>
 <tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Josh Downs             </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Jalen Nailor           </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 240</td></tr>
 <tr><td><font size=3>Jordan Addison         </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>Jalen Tolbert          </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Rashod Bateman         </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>Andrei Iosivas         </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Rashod Bateman         </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Courtland Sutton       </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 210</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Tucker Kraft           </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Brenton Strange        </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Elijah Higgins         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Charlie Kolar          </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Connor Heyward         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Juwan Johnson          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Andrew Ogletree        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Jonnu Smith            </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Hunter Henry           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Austin Hooper          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Brenton Strange        </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Hunter Henry           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Elijah Higgins         </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Cade Otton             </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Charlie Kolar          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Connor Heyward         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Juwan Johnson          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Dawson Knox            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Andrew Ogletree        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Zach Ertz              </td><td><font size=3>  65</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>Austin Seibert         </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 390</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 545</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 500</td></tr>
+<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 470</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 450</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Jake Bates             </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Matt Prater            </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 220</td></tr>
-<tr><td><font size=3>Matt Gay               </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Jake Bates             </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Matt Gay               </td><td><font size=3> 255</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>AJ Barner              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Bub Means              </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Jordan Whittington     </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>Troy Franklin          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Ja'Lynn Polk           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Devaughn Vele          </td><td><font size=3>  35</td></tr>
 <tr><td><font size=3>Jalen Coker            </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Audric Estime          </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>MarShawn Lloyd         </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Luke McCaffrey         </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Ricky Pearsall         </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Spencer Rattler        </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Ben Sinnott            </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
